--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -90,6 +90,7 @@ section > * { max-width: 1600px; margin-left: auto; margin-right: auto }
 
 /* ============= TYPOGRAPHY ============ */
 
+body { font-family: var(--font-serif) }
 h1 {
     font-size: var(--fs-xxxl);
     margin-top: 32px;
@@ -103,8 +104,11 @@ h2 {
     margin-bottom: 6px;
 }
 
+header h2 {font-weight: normal; font-style: italic}
+
+section h2 {letter-spacing: -1px;}
 p {
-	font-size: var(--fs-base);
+	font-size: var(--fs-md);
     line-height: 1.7;
 	margin-bottom: 12px;
 }
