--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,7 @@
 html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
 scroll-behavior: smooth; scroll-padding-top: 20px }
 body { line-height: 1.5; min-height: 100vh }
-img { width: 100%; height: auto }
+img { width: 35%; height: auto }
 @media (max-width: 767px ) { body { text-rendering: optimizeSpeed } }
 @media (min-width: 768px ) { body { text-rendering: optimizeLegibility } }
 
@@ -93,12 +93,17 @@ section > * { max-width: 1600px; margin-left: auto; margin-right: auto }
 
 /* ============= TYPOGRAPHY ============ */
 
-body { font-family: var(--font-sans); text-align: center;}
+
+
+body { 
+    background-color: lightgreen;
+    font-family: var(--font-sans); text-align: left
+}
 
 h1 {
     font-size: var(--fs-xxxl);
     line-height: 1.2;
-    text-align: center;
+    text-align: left;
     font-weight: normal;
     letter-spacing: -3px;
 }
@@ -110,6 +115,7 @@ h2 {
     margin-bottom: 16px;
     font-weight: normal;
     letter-spacing: 2px;
+    text-align: left;
 }
 
 h3 {
@@ -118,6 +124,7 @@ h3 {
     margin-bottom: 4px;
     line-height: 1.2;
     text-transform: uppercase;
+    text-align: left;
 }
 
 p {
@@ -126,3 +133,4 @@ p {
 	margin-bottom: 12px;
 }
 
+a { color: darkgreen; }
