--- a/exercises/assets/css/hero-text.css
+++ b/exercises/assets/css/hero-text.css
@@ -1,3 +1,5 @@
+/* Giuli Paola 77833 */
+
 /*  ============= WEB BROWSER RESETS ============ */
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
